# Security

./: AGENTS.md  CMakeLists.txt  PROJECT_STATUS.txt  README.md
include/: version.h
include/crypto/: chacha20.h  key_manager.h  ossl_raii.h  poly1305.h
include/encoders/: base32.h  base36.h  base64.h  base85.h
src/: main.cpp
src/crypto/: chacha20.cpp  key_manager.cpp  poly1305.cpp
src/encoders/: base32.cpp  base36.cpp  base64.cpp  base85.cpp
test/: test_chacha20.cpp  test_chacha20poly1305.cpp  test_encoders.cpp
